test/integration/good/tuples/onepl_type.stan
functions {
  void foo(tuple(real,) x) {
    return;
  }
}
