test/integration/bad/function-signatures/overloading/redefinition.stan
functions {
   int foo(real x){
     return 1;
   }

   int foo(real x){
     return 2;
   }
}
